# WakaHS

./: .gitattributes  CHANGELOG.md  Dockerfile  README.md  WakaHS.cabal  action-dev.yml  action.yml  cabal.project  entrypoint.sh  example.sh  output.md  run.sh  template.md  test.sh
.github/workflows/: docker-image.yml
app/: Main.hs
docs/examples/: all-time-since-today.md  error.md  stats.md
lib/: Endpoints.hs
lib/WakaHS/: Api.hs  Request.hs  Response.hs
lib/WakaHS/Entity/: AllTimeSinceToday.hs  BestDay.hs  Range.hs  Statistic.hs  Stats.hs
lib/WakaHS/IO/: Env.hs  Github.hs  Utils.hs  Waka.hs  WeeklySummary.hs
lib/WakaHS/Render/: Render.hs  Utils.hs  WeeklySummary.hs
lib/WakaHS/Render/Component/: CodeTimeBadge.hs  VisitorBadge.hs  WeeklySummary.hs
test/: ApiTest.hs  EndpointsTest.hs  Main.hs  ResponseTest.hs
