cabal-version:      2.4
name:               WakaHS
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yue Yu
maintainer:         yue.yu@superfish.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable wakahs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Endpoints

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base  ^>=4.16.4.0
        , curl  ^>=1.3.8

    hs-source-dirs:   app lib
    default-language: Haskell2010

test-suite wakahs-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:    EndpointsTest

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base
        , HUnit  ^>=1.6.2.0

    hs-source-dirs:   test
    default-language: Haskell2010
