cabal-version:      2.4
name:               WakaHS
version:            0.2.3

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yue Yu
maintainer:         yue.yu@superfish.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable wakahs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base        ^>=4.16.4.0
        , text
        , wakahs-lib

    hs-source-dirs:   app
    default-language: Haskell2010

library wakahs-lib
    exposed-modules:
        WakaHS.Api
        WakaHS.Entity.AllTimeSinceToday
        WakaHS.Entity.BestDay
        WakaHS.Entity.Range
        WakaHS.Entity.Statistic
        WakaHS.Entity.Stats
        WakaHS.IO.Env
        WakaHS.IO.Github
        WakaHS.IO.Waka
        WakaHS.Render.Component.CodeTimeBadge
        WakaHS.Render.Component.VisitorBadge
        WakaHS.Render.Component.WeeklySummary
        WakaHS.Render.Render
        WakaHS.Render.Utils
        WakaHS.Request
        WakaHS.Response

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , aeson           ^>=2.1.2.1
        , base            ^>=4.16.4.0
        , bytestring
        , curl            ^>=1.3.8
        , github          ^>=0.28.0.1
        , raw-strings-qq  ^>=1.1
        , stache          ^>=2.3.3
        , text
        , vector

    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite wakahs-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        ApiTest
        ResponseTest

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , aeson        ^>=2.1.2.1
        , base         ^>=4.16.4.0
        , bytestring
        , string-qq
        , tasty        ^>=1.4.3
        , tasty-hunit  ^>=0.10.0.3
        , text
        , wakahs-lib

    hs-source-dirs:   test
    default-language: Haskell2010
